--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "typescript": "^2.5.3"
+    "@types/victor": "^1.1.0",
+    "typescript": "^2.5.3",
+    "victor": "^1.1.0"
   }
 }
