Transfer project to webstorm

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@types/victor": "^1.1.0",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "victor": "^1.1.0"
   }
