--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "Martin Morávek (moravek.martin) <moravek.martin@gmail.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "run": "node ./dist/server.js",
+    "build": "tsc",
+    "lint": "tslint -p . -c tslint.json",
+    "lint-fix": "tslint -p . -c tslint.json --fix"
+  },
   "dependencies": {
     "@types/victor": "^1.1.0",
     "tslint": "^5.7.0",
