--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/victor": "^1.1.0",
+    "socket.io": "2.0.3",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "victor": "^1.1.0"
