--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-fix": "tslint -p . -c tslint.json --fix"
   },
   "dependencies": {
+    "@types/socket.io": "^1.4.31",
     "@types/victor": "^1.1.0",
     "socket.io": "2.0.3",
     "tslint": "^5.7.0",
