--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "lint-fix": "tslint -p . -c tslint.json --fix"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.77",
     "@types/socket.io": "^1.4.31",
     "@types/victor": "^1.1.0",
+    "lodash": "^4.17.4",
     "socket.io": "2.0.3",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
